替换JDK1语法